<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="facebook_app_id">116520179013900</string>
    <string name="app_name" >SawaTruck Loader</string>
    <string name="google_maps_key">AIzaSyBZd_nLonN2iRdkJH3nBXPjHw0Qdj1-ACM</string>
    <string name="geo_api_key">AIzaSyBZd_nLonN2iRdkJH3nBXPjHw0Qdj1-ACM</string>
    <string name="title_listing_details">Listing Details</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_change_password">Password Change</string>
    <string name="title_setting">Setting</string>
    <string name="title_search_load">Search for Loads</string>
    <string name="title_post_loads">Post your Loads</string>
    <string name="error_enter_bio">الرجاء ادخال وصف عن نفسك</string>
    <string name="btn_save_search" >Save Search</string>
    <string name="dubai">Dubai</string>
    <string name="sidemenu_home">Home</string>
    <string name="sidemenu_myads">My Ads</string>
    <string name="sidemenu_mybids">My Bids</string>
    <string name="sidemenu_mytruck">My Truck</string>
    <string name="sidemenu_mybalance">My Balance</string>
    <string name="sidemenu_inbox">Inbox</string>
    <string name="sidemenu_myrating">My Rating</string>
    <string name="sidemenu_settings">Settings</string>
    <string name="sidemenu_logout">Log Out</string>
    <string name="password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password" >Confirm Password</string>
    <string name="btn_save" >SAVE</string>
    <string name="btn_applyFilter" >Apply</string>
    <string name="password_match_error">Password does not match</string>
    <string name="choose_payment_method" >Choose Payment Method</string>
    <string name="paypal">Paypal</string>
    <string name="credit_card" >Credit/Debit Card</string>
    <string name="card_number" >Card Number</string>
    <string name="expire_date">Expiration Date</string>
    <string name="card_holder_name" >Card Holder Name</string>
    <string name="hint_enter_balance">Enter Balance</string>
    <string name="cvv" >CVV</string>
    <string name="btn_charge" >Charge</string>
    <string name="truck_type" tools:ignore="UnusedResources">Truck Type</string>
    <string name="truck_type_item">Truck Type:</string>
    <string name="distance_item">Distance:</string>
    <string name="budget_item" >Budget:</string>
    <string name="available_item" >Available:</string>
    <string name="vehicle_type_item">Vehicle Type:</string>
    <string name="budget_price_item"  tools:ignore="UnusedResources">Budget Price:</string>
    <string name="load_details_item">Load Details:</string>
    <string name="upload_date_item">Upload Date:</string>
    <string name="delivery_date_item">Delivery Date:</string>
    <string name="hint_type_message">Type a message here</string>
    <string name="message" tools:ignore="UnusedResources">Message</string>
    <string name="what_are_your_loads">What are your loads?</string>
    <string name="pickup">Pickup</string>
    <string name="delivery" >Delivery</string>
    <string name="load_description">Load Description</string>
    <string name="placeholder_text" tools:ignore="UnusedResources">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do ei eiusmod tem por incididunt ut labore et dolore.</string>
    <string name="btn_fastsubmit" >Fast Submit</string>
    <string name="btn_adddetails"  tools:ignore="UnusedResources">Add details</string>
    <string name="package_name" tools:ignore="UnusedResources">Package</string>
    <string name="quantity">Quantity</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_brand">Vehicle Brand</string>
    <string name="model">Model</string>
    <string name="unit_weight">Unit Weight</string>
    <string name="measure_unit">Measure Unit</string>
    <string name="feature_of_each_package" tools:ignore="UnusedResources">Feature of each package</string>
    <string name="optional" tools:ignore="UnusedResources">(Optional)</string>
    <string name="photo_to_share">Do you have photo to share?</string>
    <string name="want_choose_truck" tools:ignore="UnusedResources">Do you want to choose Truck?</string>
    <string name="truck_details">Truck Details</string>
    <string name="vehicle_class">Vehicle Class</string>
    <string name="vehicle_bodywork">Vehicle Bodywork</string>
    <string name="vehicle_body">Vehicle Body</string>
    <string name="take_photo">Take a Photo</string>
    <string name="upload_photo">Upload a Photo</string>
    <string name="further_information" tools:ignore="UnusedResources">Further Information</string>
    <string name="form_payment">Form Payment</string>
    <string name="enter_currency" tools:ignore="UnusedResources">Currency</string>
    <string name="invite_driver" tools:ignore="UnusedResources">Invite Driver</string>
    <string name="btn_invited" >Invited</string>
    <string name="active_bids" >Active Bids</string>
    <string name="confirmed_bids" >Confirmed Bids</string>
    <string name="btn_accept" >Accept</string>
    <string name="btn_reject" >Reject</string>
    <string name="offer">Offer</string>
    <string name="my_balance">My Balance</string>
    <string name="your_balance">Your Balance</string>
    <string name="your_point">Your Point</string>
    <string name="promo_code">Promo Code</string>
    <string name="add_promo_code" >Add Promo Code</string>
    <string name="add_payment_method" >Add Payment Method</string>
    <string name="charge_balance" >Charge your balance</string>
    <string name="transaction_history">Transaction History</string>
    <string name="view_delivery_details" tools:ignore="UnusedResources">View Delivery Details</string>
    <string name="btn_call" >Call</string>
    <string name="btn_message" >Message</string>
    <string name="my_bookings" tools:ignore="UnusedResources">My Bookings</string>
    <string name="tab_accepted">Accepted</string>
    <string name="tab_rejected">Rejected</string>
    <string name="tab_cancelled">Canceled</string>
    <string name="budget_price" >Budget Price</string>
    <string name="tab_booked">Booked</string>
    <string name="tab_opened">Opened</string>
    <string name="tab_my_ratings">My Ratings</string>
    <string name="tab_ratings">Ratings</string>
    <string name="notifications">Notifications</string>
    <string name="your_bill">Your Bill</string>
    <string name="how_was_delivery">How was the delivery?</string>
    <string name="communication" >Communication</string>
    <string name="care_of_goods" tools:ignore="UnusedResources" >Care of goods</string>
    <string name="punctuality">Punctuality</string>
    <string name="services_as_described" tools:ignore="UnusedResources">Services as described</string>
    <string name="hint_enter_comment">Enter Comment</string>
    <string name="route">Route</string>
    <string name="search_for_truck">Search for Truck</string>
    <string name="btn_search" >Search</string>
    <string name="distance">Distance</string>
    <string name="promo_code_applied">Promo code discount applied:</string>
    <string name="notice_collect_money">Please collect money from recipient</string>
    <string name="setting_view_profile">View Profile</string>
    <string name="setting_edit_profile">Edit Profile</string>
    <string name="setting_change_password">Change Password</string>
    <string name="setting_language">Language</string>
    <string name="setting_notifications">Notifications</string>
    <string name="setting_rate_apps">Rate the apps</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobilephone">Mobile Phone</string>
    <string name="hint_username">Name</string>
    <string name="hint_phonenumber">Phone Number</string>
    <string name="hint_landingphone">Landing Phone(Optional)</string>
    <string name="hint_companyname">Company Name(Optional)</string>
    <string name="hint_bio">Bio(Optional)</string>
    <string name="hint_firstname">First name</string>
    <string name="hint_lastname">Last name</string>
    <string name="language">Language</string>
    <string name="btn_continue" >Continue</string>
    <string name="notice_inputcode">Please enter code sent on your phone</string>
    <string name="start_travel">Driver start travel to delivery</string>
    <string name="btn_ok" >Ok</string>
    <string name="btn_cancel" >Cancel</string>
    <string name="load_success" tools:ignore="UnusedResources"></string>
    <string name="english">English</string>
    <string name="chinese" tools:ignore="UnusedResources" >Chinese</string>
    <string name="arabic" >Arabic</string>
    <string name="book" >Book</string>
    <string name="recipient_information" tools:ignore="UnusedResources">Recipient Information</string>
    <string name="sendbid">Send Your Bid</string>
    <string name="enter_different_price">Enter different price(optional)</string>
    <string name="enter_price" tools:ignore="UnusedResources">Enter the price</string>
    <string name="currency" >AED</string>
    <string name="cancel_delivery" >Cancel delivery</string>
    <string name="radio_unable_find_delivery">Unable to find Delivery</string>
    <string name="radio_oversized">Oversized item</string>
    <string name="radio_excessive_waittime">Excessive Wait time</string>
    <string name="radio_other">Other</string>
    <string name="enter_savename">Enter the save name</string>
    <string name="radio_camera">Camera</string>
    <string name="radio_gallery">Gallery</string>
    <string name="camera_or_gallery" >Camera/Gallery</string>
    <string name="notify">Notify</string>
    <string name="btn_book"  tools:ignore="UnusedResources">Book</string>
    <string name="btn_showmap" >Show Map</string>
    <string name="btn_submit" >Submit</string>
    <string name="btn_next" >Next</string>
    <string name="notice_guest"> <![CDATA[ <p> Hello<br><br>
        You can only see these <br> option if you are logged in, so <br>
        in order to get the most of this <br> app please login or create an <br> account.
    ]]></string>
    <string name="workhistory">Work History</string>
    <string name="verification">Verification</string>
    <string name="menu_terms">Terms</string>
    <string name="insurance_cover">Insurance Cover</string>
    <string name="activate" >Activate</string>
    <string name="account_create" >Account Create</string>
    <string name="last_login">Last Login</string>
    <string name="verified">Verified</string>
    <string name="not_verified">Not Verified</string>
    <string name="job">job</string>
    <string name="jobs">jobs</string>
    <string name="btn_login" >Log In</string>
    <string name="btn_register" >Create Account</string>
    <string name="btn_signin" >Sign In</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="or">OR</string>
    <string name="btn_signin_facebook" >Signin with facebook</string>
    <string name="btn_signin_google" >Signin with google</string>
    <string name="not_yet_account">I haven\'t account yet?</string>
    <string name="signup"><u>Sign up</u></string>
    <string name="map_view">Map View</string>
    <string name="radio_broker">Broker</string>
    <string name="radio_company">Company</string>
    <string name="radio_have_own_track">Have Own Track</string>
    <string name="btn_signup" >Signup</string>
    <string name="btn_signup_facebook" >Signup with Facebook</string>
    <string name="btn_signup_google" >Signup with google</string>
    <string name="terms">By Signing up with SawaTruck you agree to <b>terms and conditions</b></string>
    <string name="sender">Sender</string>
    <string name="recipient">Recipient</string>
    <string name="btn_cancel_delivery" >Cancel Delivery</string>
    <string name="error_enter_email">Please enter the email</string>
    <string name="cash">Cash</string>
</resources>