<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="UnusedResources">


    <com.sawatruck.loader.view.design.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/sendbid"
        android:textAllCaps="true"
        android:textSize="16dp"
        android:gravity="center"
        />
    <com.sawatruck.loader.view.design.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorGray"
        android:text="@string/enter_different_price"
        android:textSize="16dp"
        android:gravity="center"
        />
    <RelativeLayout
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="40dp"
        android:paddingStart="40dp">

        <com.sawatruck.loader.view.design.CustomEditText
            android:id="@+id/edit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="0"/>
            <requestFocus />




        <com.sawatruck.loader.view.design.CustomTextView
            android:id="@+id/txt_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/edit_price"
            android:layout_alignBottom="@+id/edit_price"
            android:layout_alignParentRight="true"
            android:textSize="18dp"
            android:text="@string/currency"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:orientation="horizontal"
        android:paddingEnd="40dp"
        android:paddingStart="40dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"

            android:background="@drawable/weak_round_cancelbutton"
            android:text="@string/btn_cancel"
            android:textColor="@color/colorWhite" />
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:layout_marginLeft="40dp"
            android:background="@drawable/weak_round_button"
            android:text="@string/btn_ok"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="40dp" />
    </LinearLayout>

</LinearLayout>