<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent">
    <include layout="@layout/layout_toolbar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.sawatruck.loader.view.design.CustomEditText
            android:id="@+id/edit_currentpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/colorDarkGray"
            android:textColorHint="@color/colorLightGray"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp" />

        <com.sawatruck.loader.view.design.CustomEditText
            android:id="@+id/edit_newpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/colorDarkGray"
            android:textColorHint="@color/colorLightGray"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <com.sawatruck.loader.view.design.CustomEditText
            android:id="@+id/edit_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/colorDarkGray"
            android:layout_alignParentBottom="true"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/colorLightGray"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <com.sawatruck.loader.view.design.CustomTextView
                android:id="@+id/btn_changePassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20dp"
                android:background="@color/colorOrange"
                android:textColor="@color/colorWhite"
                android:text="@string/btn_save" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>